turmites.lessons.turmites.langton.Langton.scala.code
def step() {
getCouleurSol();
if(getCouleurSol()==Color.white){
	setCouleurBrosse(Color.black);
	baisseBrosse();
	leveBrosse();
	droite();
	avance();

}else{
	setCouleurSol(Color.white);
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
}
}
